# fprime-contributions

./: .gitmodules  README.md
BufferManager/docs/: sdd.md
Common/Cfg/: QuestConstants.hpp
Common/Ports/: CommonPorts.mdxml  EnablePortAi.xml  Makefile  ShortLogPortAi.xml  U32IdxPortAi.xml  mod.mk
HLProc/Cfg/: HLProcPolyDb.hpp  Makefile  mod.mk
HLProc/EventExpander/: EventExpander.mdxml  EventExpanderComponentAi.xml  EventExpanderComponentImpl.cpp  EventExpanderComponentImpl.hpp  Makefile  mod.mk
HLProc/HLRosIface/: HLRosIface.mdxml  HLRosIfaceComponentAi.xml  HLRosIfaceComponentImpl.cpp  HLRosIfaceComponentImpl.hpp  Makefile  Telemetry.xml  extra_vars.mk  mod.mk
HLProc/LLRouter/: LLRouter.mdxml  LLRouterComponentAi.xml  LLRouterComponentImpl.cpp  LLRouterComponentImpl.hpp  LLRouterComponentImplCfg.hpp  Makefile  mod.mk
LLProc/HLRouter/: HLRouter.mdxml  HLRouterComponentAi.xml  HLRouterComponentImpl.cpp  HLRouterComponentImpl.hpp  HLRouterComponentImplCfg.hpp  Makefile  mod.mk
LLProc/LLCmdDispatcher/: LLCmdDispatcher.mdxml  LLCmdDispatcherComponentAi.xml  LLCmdDispatcherComponentImpl.cpp  LLCmdDispatcherComponentImpl.hpp  LLCmdDispatcherImplCfg.hpp  Makefile  README  mod.mk
LLProc/LLCycle/: LLCycle.mdxml  LLCycleComponentAi.xml  LLCycleComponentImpl.cpp  LLCycleComponentImpl.hpp  LLCycleComponentImplCfg.hpp  Makefile  mod.mk
LLProc/LLDebug/: LLDebug.mdxml  LLDebugComponentAi.xml  LLDebugComponentImpl.cpp  LLDebugComponentImpl.hpp  LLDebugComponentImplCfg.hpp  Makefile  mod.mk
LLProc/LLTlmChan/: LLTlmChan.mdxml  LLTlmChanComponentAi.xml  LLTlmChanImpl.cpp  LLTlmChanImpl.hpp  LLTlmChanImplCfg.hpp  LLTlmChanImplGet.cpp  LLTlmChanImplRecv.cpp  LLTlmChanImplTask.cpp  Makefile  mod.mk
LLProc/Ports/: DebugStringPortAi.xml  LLPorts.mdxml  Makefile  mod.mk
LLProc/ShortLogQueue/: Makefile  ShortLogQueue.mdxml  ShortLogQueueComponentAi.xml  ShortLogQueueComponentImpl.cpp  ShortLogQueueComponentImpl.hpp  mod.mk  (+1 more)
R5/: R5LaunchPadConfiguration.ccxml
R5/A2DDrv/: Makefile  (+8 more)
ROS/: ROS-TODO.md  fprime_modmk_linux_jade  fprime_modmk_linux_kinetic  fprime_modmk_linux_melodic
ROS/fprime_ws/src/fprime/: CMakeLists.txt  package.xml
ROS/fprime_ws/src/genfprime/: CMakeLists.txt  package.xml  setup.py
ROS/fprime_ws/src/genfprime/cmake/: genfprime-extras.cmake.em  genmodmk.cmake
ROS/fprime_ws/src/genfprime/scripts/: CMakeLists.txt  gen_fprime.py
ROS/fprime_ws/src/genfprime/src/genfprime/: generate_modmk.py  generator.py  genfprime_main.py  name.py  types.py
SnapdragonFlight/: Snap-TODO.md
(+655 files in other folders)
