<?xml version="1.0"?>
<package format="2">
  <name>genfprime</name>
  <version>0.0.1</version>
  <description>FPrime Serializable and Port XML generators.</description>
  <maintainer email="mereweth@jpl.nasa.gov">Gene Merewether</maintainer>
  <license>BSD</license>

  <url type="bugtracker">https://github.com/nasa/fprime/issues</url>
  <url type="repository">https://github.com/nasa/fprime</url>

  <buildtool_depend version_gte="0.5.78">catkin</buildtool_depend>

  <depend>genmsg</depend>

  <export>
    <message_generator>fprime</message_generator>
    <architecture_independent/>
  </export>
</package>
